--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ targetCompatibility = 1.8
 
 jar {
     baseName = 'i18n'
-    version =  '0.1.0'
+    version = '0.1.0'
 }
 
 repositories {
@@ -41,7 +41,10 @@ dependencies {
     compile("com.google.guava:guava:18.0")
     compile("org.apache.commons:commons-lang3:3.4")
     compile("org.springframework:spring-context-support:4.1.6.RELEASE")
+    compile('io.springfox:springfox-swagger2:2.3.1')
+    compile('io.springfox:springfox-swagger-ui:2.3.1')
 
+    testCompile('io.springfox:springfox-staticdocs:2.3.1')
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit:4.12")
     testCompile("com.jayway.jsonpath:json-path:0.8.1")
