--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile("org.springframework:spring-context-support:4.1.6.RELEASE")
     compile('io.springfox:springfox-swagger2:2.3.1')
     compile('io.springfox:springfox-swagger-ui:2.3.1')
+    compile('io.swagger:swagger-project:1.5.6')
+
 
     testCompile('io.springfox:springfox-staticdocs:2.3.1')
     testCompile("org.springframework.boot:spring-boot-starter-test")
