--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -56,4 +57,10 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
 }
 
-
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination "${buildDir}/jacocoHtml"
+    }
+}
