--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "requirejs": "^2.1.16"
   },
   "devDependencies": {
+    "karma-chrome-launcher": "^0.1.12",
     "karma-htmlfile-reporter": "^0.1.2",
     "karma-ng-html2js-preprocessor": "^0.1.2",
-    "karma-phantomjs-launcher": "~0.1"
+    "karma-phantomjs-launcher": "~0.1",
+    "karma-safari-launcher": "^0.1.1"
   },
   "scripts": {
     "test": "karma start karma.conf.js",
