made it running default without consul. You have to set the use of consul in production by adding a parameter.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,4 @@ spring:
         consul:
             host: 192.168.99.100
             port: 8500
-            discovery:
-                instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-                
+#                instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
