--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
 spring:
     application:
         name: ExampleResource
+    cloud:
+        consul:
+            discovery:
+                enabled: false
+            config:
+                enabled: false
