--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-group 'nl.vorstdev.example.resource'
-version '1.0-SNAPSHOT'
-
 buildscript {
     ext {
         springBootVersion = '1.2.4.RELEASE'
@@ -16,7 +13,6 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath "gradle.plugin.com.craigburke.gradle:karma-gradle:1.4.3"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:1.2"
-        classpath "gradle.plugin.com.craigburke.gradle:bower-installer-gradle:2.5.1"
     }
 }
 
@@ -24,17 +20,21 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'jacoco'
-apply plugin: "com.craigburke.karma"
-apply plugin: "com.craigburke.bower-installer"
-apply plugin: "org.sonarqube"
+apply plugin: 'com.craigburke.karma'
+apply plugin: 'org.sonarqube'
+//apply plugin: 'pmd'
+//apply plugin: 'jdepend'
+//apply plugin: 'checkstyle'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+apply from: 'gradle/versioning.gradle'
 
 jar {
-    baseName = 'example-resource'
-    version = '1.0-SNAPSHOT'
+    baseName = project.name
+    version = project.version.toString()
 }
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 repositories {
     mavenCentral()
@@ -137,6 +137,3 @@ karma {
     ]
 }
 
-bower {
-    installBase = 'src/main/resources/static/components'
-}
