--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,10 @@
+group=nl.vorstdev.example.resource
+name=example-resource
+
 systemProp.sonar.host.url=http://192.168.99.100:9000
 systemProp.sonar.login=admin
 systemProp.sonar.password=admin
+
+
+
+
