--- a/gradle/version.gradle
+++ b/gradle/version.gradle
@@ -1,4 +1,4 @@
-version = new ProjectVersion(1, 0, System.env.BUILD_NUMBER)
+version = new ProjectVersion(1, 0, System.env.SOURCE_BUILD_NUMBER)
 
 class ProjectVersion {
 
