--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-hateoas")
+    compile("org.springframework.boot:spring-boot")
     compile("org.springframework.cloud:spring-cloud-starter-consul-all:1.0.0.M5")
     compile("org.codehaus.jackson:jackson-mapper-asl:1.9.13")
     compile("com.google.guava:guava:18.0")
